<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/favorite"
        android:contentDescription="@string/content_description_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/baseline_settings_24"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />

</menu>